<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/textView_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#4871A8"
        android:textStyle="bold"
        android:textSize="32dp"
        android:text="" />
    
    <TextView
        android:id="@+id/textView_date_relative"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="" />
    
	<RadioGroup
	    android:id="@+id/radioGroup_rate"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    
		    <RadioButton android:id="@+id/radio_shitday"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/shit_label" />
		    
		    <RadioButton android:id="@+id/radio_notShitday"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/not_shit_label" />
		    
		    <RadioButton android:id="@+id/radio_undefined"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/undefined_label" />
	</RadioGroup>
    
	<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="20dp">
		    
		<Button android:id="@+id/button_saveDay"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/save_day" />
		
		<Button android:id="@+id/button_cancelDayUpdate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/cancel_day_update" />
	
    </LinearLayout>
    

	
</LinearLayout>
