<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal">
	    
	    <Spinner
		    android:id="@+id/spinner_months"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent" />
	    
	    <Spinner
		    android:id="@+id/spinner_years"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent" />
	    
	    <Button
	        android:id="@+id/button_applyFilters"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent" 
		    android:text="@string/apply_filters" /> 

    </LinearLayout>
	
    <ListView 
        android:layout_marginTop="15dp"
        android:id="@+id/listView_shitDays"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
	<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:layout_gravity="center_horizontal">
		    
		<Button android:id="@+id/button_loadPreviousMonth"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/previous_month" />
		
		<Button android:id="@+id/button_loadNextMonth"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/next_month" />
	
    </LinearLayout>
    

	
</LinearLayout>
